syntax = "proto3";

package api.chitchat;


// 聊天
message CreateChatRequest {
  string name = 1;
  string type = 2;
}

message UpdateChatRequest {
  string id = 1;
  string name = 2;
  string token = 3;
}

message DeleteChatRequest {
  string id = 1;
  string token = 2;
}

message ListChatRequest {
  string token = 1;
  int64 lastCreateTime = 2;
}

message ChatCommonResponse {
  string role = 1;
  string content = 2;
}

message ListChatResponse {
  repeated ChatCommonResponse chats = 1;
}

message CreateMessageRequest {
  string role = 1;
  string content = 2;
}

message CreateMessageResponse {
  string role = 1;
  string content = 2;
  bool isStart = 3;
  bool isContinue = 4;
  bool isFinished = 5;
}
